End-of-sprint-2

--- a/learning-plan.html
+++ b/learning-plan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Values</title>
+    <title>Learning-plan</title>
     <meta charset="UTF-8">
     <link href="main.css" rel="stylesheet" type="text/css">
   </head>
@@ -11,9 +11,9 @@
   
   <nav>
     <ul class="list">
-      <li id="home"><a href="home.html">Home</a></li>
+      <li id="home"><a href="template.html">Home</a></li>
       <li id="blogs"><a href="My-Blog.html">Sprint-Enrties</a></li>
-      <li id="about-me"><a href="About me.html">About me</a></li>
+      <li id="about-me"><a href="About-me.html">About me</a></li>
       </ul>
   </nav>
   <div class="values">
