--- a/My-Blog.html
+++ b/My-Blog.html
@@ -11,9 +11,9 @@
   
   <nav>
     <ul class="list">
-      <li id="home"><a href="home.html">Home</a></li>
+      <li id="home"><a href="template.html">Home</a></li>
       <li id="blogs"><a href="My-Blog.html">Sprint-Enrties</a></li>
-      <li id="about-me"><a href="About me.html">About me</a></li>
+      <li id="about-me"><a href="About-me.html">About me</a></li>
       </ul>
   </nav>
   <div class="values">
