--- a/Q1.html
+++ b/Q1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My-Blog</title>
+    <title>Question</title>
     <meta charset="UTF-8">
     <link href="main.css" rel="stylesheet" type="text/css">
   
@@ -14,9 +14,9 @@
   <nav>
     <div>
     <ul>
-      <li id="home"> <a href="home.html">Home</a></li>
+      <li id="home"> <a href="template.html">Home</a></li>
       <li id="blogs"><a href="My-Blog.html">Sprint-Enrties</a></li>
-      <li id="about-me"><a href="About me.html">About me</a></li>
+      <li id="about-me"><a href="About-me.html">About me</a></li>
       
       </ul>
     </div>
