--- a/template.html
+++ b/template.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home=page</title>
+    <title>Values</title>
     <meta charset="UTF-8">
     <link href="main.css" rel="stylesheet" type="text/css">
-  
   </head>
-
-  
+ 
   <body>
     <header>
   
   <nav>
-    <div>
-    <ul>
-      <li id="home"> <a href="template.html">Home</a></li>
-      <li id="blogs"><a href="My-Blog.html">Sprint-Enrties</a></li>
+    <ul class="list">
+      <li id="home"><a href="index.html">Home</a></li>
+      <li id="blogs"><a href="template.html">Sprint-Enrties</a></li>
       <li id="about-me"><a href="About-me.html">About me</a></li>
-      
       </ul>
-    </div>
   </nav>
-  <h1 id="h1">Nau Mai, Haere Mai!</h1>
-</header>  
-<p class="main" id="welcome">Kia ora and welcome to my page! This is a huge step for me and still trying to warp my head around 
-  it so please be patient. Thank you for visiting
-   and I hope to improve my skills as I continue on in this journey</p>
-  </body>
-</html>
+  <div class="values">
+  <h1>Sprint-Entries</h1>
+  </div>
+  <div class="blog-entries">
+      <ul>
+          <li> <a href="identity-values.html">Identity and Values</a></il>
+          <li> <a href="Q1.html">What are the best practices associated with using classes vs. ids?</a></il>
+          <li> <a href="learning-plan.html">My Learning Plan</a></il>
+      </ul>
+  </div>
+  
+ 
+</body>
+    </body>
+  </html>
