--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <nav>
     <div>
     <ul>
-      <li id="home"> <a href="home.html">Home</a></li>
-      <li id="blogs"><a href="My-Blog.html">Sprint-Enrties</a></li>
+      <li id="home"> <a href="index.html">Home</a></li>
+      <li id="blogs"><a href="template.html">Sprint-Enrties</a></li>
       <li id="about-me"><a href="About me.html">About me</a></li>
       
       </ul>
