--- a/learning-plan.html
+++ b/learning-plan.html
@@ -11,8 +11,8 @@
   
   <nav>
     <ul class="list">
-      <li id="home"><a href="template.html">Home</a></li>
-      <li id="blogs"><a href="My-Blog.html">Sprint-Enrties</a></li>
+      <li id="home"><a href="index.html">Home</a></li>
+      <li id="blogs"><a href="template.html">Sprint-Enrties</a></li>
       <li id="about-me"><a href="About-me.html">About me</a></li>
       </ul>
   </nav>
